Apply new structure to all pages except index

--- a/about/index.html
+++ b/about/index.html
@@ -56,101 +56,101 @@
 		<!-- InstanceEndEditable -->
 		
 </head>
-  <body>
-		<section id="loading">
+  <body class="row justify-content-center">
+		<div id="loading">
   	  <img src="../images/loading.gif" alt="now loading">
-	  </section>
-		<div id="content">
-			<header>
+	  </div>
+		<div id="content" class="col">
+			<header class="row justify-content-start">
 				<a href="../index.html">
 					<img src="../images/catface.png" id="catface" alt="Catface logo">
 				</a>
 			</header>
 	  
-			<!-- InstanceBeginEditable name="projectPage" -->
-			<section class="tiles">
-				<div class="tileText col-100">
-					<h1>About</h1>
-					<p>Darin was born in Los Angeles, California. He graduated from UC Davis with a BA in Design in 2016.</p>
-					<p>Darin uses light and code to create immersive interactive experiences. At times, he aims to move people further along the path of vital developmental experiences. At times, he simply aims to create moments of delight.</p>
-					<p>He has been recognized for his <a href="https://2018.sfdesignweek.org/2016-enrichment-scholarship-winners/">“clean, smart design solutions with well-researched foundations”, “ability to transform personal stories into useful tools”</a>, and <a href="http://www.ladancechronicle.com/joe-kye-ching-ching-wong-launch-their-international-tour-at-navel-la/"> “visual magic”.</a></p>
-					<p>His work has been presented at the International Symposium on Electronic Art, Hong Kong Polytechnic University, the Crocker Art Museum, and more.</p>
-					<table>
-						<tr>
-							<td rowspan="4"><h3>2018</h3></td>
-						</tr>
-						<tr>
-							<td><strong>May</strong></td>
-							<td><p>Presented interactive dance floor <a href="../shadowplay/index.html">“ShadowPlay”</a> at Shabang Music Festival with Respect the Funk</p></td>
-						</tr>
-						<tr>
-							<td><strong>Apr</strong></td>
-							<td><p>Presented interactive dance floor <a href="../shadowplay/index.html">“ShadowPlay”</a> at Crocker Art Museum with The Hot Baked Goods</p></td>
-						</tr>
-						<tr>
-							<td><strong>Mar</strong></td>
-							<td><p><a href="../arirang/index.html">Concert visualization</a> at the Sophia Center for the Arts with Joe Kye</p></td>
-						</tr>
-					</table>
-					<table>
-						<tr>
-							<td rowspan="4"><h3>2017</h3></td>
-						</tr>
-						<tr>
-							<td><strong>Dec</strong></td>
-							<td><p><a href="../arirang/index.html">Concert visualization</a> at #Migrants album release show with Joe Kye</p></td>
-						</tr>
-						<tr>
-							<td><strong>Oct</strong></td>
-							<td><p>Presented <a href="../gato/index.html"><i>Gato</i></a> at the Crocker Art Museum</p></td>
-						</tr>
-						<tr>
-							<td><strong>May</strong></td>
-							<td><p>Concert visualization at BreatheFest with IdeaTeam</p></td>
-						</tr>
-					</table>
-					<table>
-						<tr>
-							<td rowspan="9"><h3>2016</h3></td>
-						</tr>
-						<tr>
-							<td><strong>Nov</strong></td>
-							<td><p>Guest lecturer on Speculative Design at the UC Davis</p></td>
-						</tr>
-						<tr>
-							<td><strong>Oct</strong></td>
-							<td><p><a href="../arirang/index.html">Concert visualization</a> at CLARA with Joe Kye</p></td>
-						</tr>
-						<tr>
-							<td></td>
-							<td><p>Guest lecturer on Speculative Design at the UC Davis</p></td>
-						</tr>
-						<tr>
-							<td><strong>Aug</strong></td>
-							<td><p><a href="../gato/index.html">Crocker Art Museum ArtSpots artist-in-residence</a></p></td>
-						</tr>
-						<tr>
-							<td rowspan="2"><strong>Jun</strong></td>
-							<td><p><a href="../arirang/index.html">Concert visualization at #SeedToSprout with Joe Kye</a></p></td>
-						</tr>
-						<tr>
-							<td><p><a href="https://2018.sfdesignweek.org/2016-enrichment-scholarship-winners/">AIGA SF Enrichment scholar</a></p></td>
-						</tr>
-						<tr>
-							<td><strong>May</strong></td>
-							<td><p>Guest lecturer on Design for Social Change at Hong Kong Polytechnic University</p></td>
-						</tr>
-						<tr>
-							<td><strong>Apr</strong></td>
-							<td><p>Presented <a href="../disquiet/index.html"><i>DisQuiet</i></a> at the UC Davis Undergraduate Research Conference</p></td>
-						</tr>
-					</table>
-				</div>
+			<div class="row justify-content-center">
+				<!-- InstanceBeginEditable name="projectPage" -->
+			<section class="col border-top">
+				<h1>About</h1>
+				<p>Darin was born in Los Angeles, California. He graduated from UC Davis with a BA in Design in 2016.</p>
+				<p>Darin uses light and code to create immersive interactive experiences. At times, he aims to move people further along the path of vital developmental experiences. At times, he simply aims to create moments of delight.</p>
+				<p>He has been recognized for his <a href="https://2018.sfdesignweek.org/2016-enrichment-scholarship-winners/">“clean, smart design solutions with well-researched foundations”, “ability to transform personal stories into useful tools”</a>, and <a href="http://www.ladancechronicle.com/joe-kye-ching-ching-wong-launch-their-international-tour-at-navel-la/"> “visual magic”.</a></p>
+				<p>His work has been presented at the International Symposium on Electronic Art, Hong Kong Polytechnic University, the Crocker Art Museum, and more.</p>
+				<table>
+					<tr>
+						<td rowspan="4"><h3>2018</h3></td>
+					</tr>
+					<tr>
+						<td><strong>May</strong></td>
+						<td><p>Presented interactive dance floor <a href="../shadowplay/index.html">“ShadowPlay”</a> at Shabang Music Festival with Respect the Funk</p></td>
+					</tr>
+					<tr>
+						<td><strong>Apr</strong></td>
+						<td><p>Presented interactive dance floor <a href="../shadowplay/index.html">“ShadowPlay”</a> at Crocker Art Museum with The Hot Baked Goods</p></td>
+					</tr>
+					<tr>
+						<td><strong>Mar</strong></td>
+						<td><p><a href="../arirang/index.html">Concert visualization</a> at the Sophia Center for the Arts with Joe Kye</p></td>
+					</tr>
+				</table>
+				<table>
+					<tr>
+						<td rowspan="4"><h3>2017</h3></td>
+					</tr>
+					<tr>
+						<td><strong>Dec</strong></td>
+						<td><p><a href="../arirang/index.html">Concert visualization</a> at #Migrants album release show with Joe Kye</p></td>
+					</tr>
+					<tr>
+						<td><strong>Oct</strong></td>
+						<td><p>Presented <a href="../gato/index.html"><i>Gato</i></a> at the Crocker Art Museum</p></td>
+					</tr>
+					<tr>
+						<td><strong>May</strong></td>
+						<td><p>Concert visualization at BreatheFest with IdeaTeam</p></td>
+					</tr>
+				</table>
+				<table>
+					<tr>
+						<td rowspan="9"><h3>2016</h3></td>
+					</tr>
+					<tr>
+						<td><strong>Nov</strong></td>
+						<td><p>Guest lecturer on Speculative Design at UC Davis</p></td>
+					</tr>
+					<tr>
+						<td><strong>Oct</strong></td>
+						<td><p><a href="../arirang/index.html">Concert visualization</a> at CLARA with Joe Kye</p></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td><p>Guest lecturer on Speculative Design at the UC Davis</p></td>
+					</tr>
+					<tr>
+						<td><strong>Aug</strong></td>
+						<td><p><a href="../gato/index.html">Crocker Art Museum ArtSpots artist-in-residence</a></p></td>
+					</tr>
+					<tr>
+						<td rowspan="2"><strong>Jun</strong></td>
+						<td><p><a href="../arirang/index.html">Concert visualization at #SeedToSprout with Joe Kye</a></p></td>
+					</tr>
+					<tr>
+						<td><p><a href="https://2018.sfdesignweek.org/2016-enrichment-scholarship-winners/">AIGA SF Enrichment scholar</a></p></td>
+					</tr>
+					<tr>
+						<td><strong>May</strong></td>
+						<td><p>Guest lecturer on Design for Social Change at Hong Kong Polytechnic University</p></td>
+					</tr>
+					<tr>
+						<td><strong>Apr</strong></td>
+						<td><p>Presented <a href="../disquiet/index.html"><i>DisQuiet</i></a> at the UC Davis Undergraduate Research Conference</p></td>
+					</tr>
+				</table>
 			</section>
 			<!-- InstanceEndEditable -->
-			<section class="tiles b-t-0">
-      	<div class="tileText col-100 row-auto p-t-0">
-        	<p>Darin E. Reyes is a visual designer and creative coder living in San Luis Obispo, California.</p>
+			</div>
+			<div class="row justify-content-center">
+				<section class="col">
+					<p>Darin E. Reyes is a visual designer and creative coder living in San Luis Obispo, California.</p>
 					<p>
 						<a href="../index.html">Work</a>
 						<a href="index.html">About</a>
@@ -165,8 +165,8 @@
 							<i class="fa fa-twitter"></i> 
 						</a>
 					</p>
-      	</div>
-    	</section>
+				</section>
+			</div>
 			<!-- InstanceBeginEditable name="homePage" -->
 			<!-- InstanceEndEditable -->
 		
