--- a/audiovisuals/index.html
+++ b/audiovisuals/index.html
@@ -56,53 +56,53 @@
 		<!-- InstanceEndEditable -->
 		
 </head>
-  <body>
-		<section id="loading">
+  <body class="row justify-content-center">
+		<div id="loading">
   	  <img src="../images/loading.gif" alt="now loading">
-	  </section>
-		<div id="content">
-			<header>
+	  </div>
+		<div id="content" class="col">
+			<header class="row justify-content-start">
 				<a href="../index.html">
 					<img src="../images/catface.png" id="catface" alt="Catface logo">
 				</a>
 			</header>
 	  
-			<!-- InstanceBeginEditable name="projectPage" -->
-			<section class="tiles">
-				<div class="tileText col-100">
-					<h1>AudioVisuals</h1>
-					<p>Music visualizer</p>
-					<img src='images/heroAudioVisuals.gif'> <i class='fa fa-caret-up' aria-hidden='true'></i>
-					<p class='caption'>A visualization of the song “She Wants” by Metronomy</p>
-					<table>
-						<tr>
-							<td><h3>Role</h3></td>
-							<td><p>Coder, Visual Designer</p></td>
-						</tr>
-						<tr>
-							<td><h3>Tools</h3></td>
-							<td><p>Processing</p></td>
-						</tr>
-					</table>
-					<h2>Concept</h2>
-					<p>When I was a kid, I was fascinated by the music visualizers that I found in the Windows XP-era Media Player. When I began learning to code, I decided to try making a visualizer as well. In addition to generating .gif and video art, the project allowed me to learn about math, electronics, physics, and music theory.</p>
-					<p>This was the first project where I explored the intersections of music, design, and code. I continued this exploration in projects such as <a href="../disquiet/index.html">DisQuiet</a>, <a href="../arirang/index.html">Arirang</a>, and <a href="../gato/index.html">Gato</a>.</p>
-					<h2>Samples</h2>
-					<img src="images/AudioVisuals (1).gif" alt="“Viernes” by Omar Rodriguez Lopez and Ximena Sariñana"> <i class="fa fa-caret-up" aria-hidden="true"></i>
-					<p class="caption">“Viernes” by Omar Rodriguez Lopez and Ximena Sariñana</p>
-					<img src="images/AudioVisuals (3).gif" alt="“L’Via L’Viaquez” by The Mars Volta"> <i class="fa fa-caret-up" aria-hidden="true"></i>
-					<p class="caption">“L’Via L’Viaquez” by The Mars Volta</p>
-					<img src="images/AudioVisuals (2).gif" alt="“Irene” by Caribou"> <i class="fa fa-caret-up" aria-hidden="true"></i>
-					<p class="caption">“Irene” by Caribou</p>
-					<img src="images/AudioVisuals (5).gif" alt="“Linne (Black XS Session)” by Shugo Tokumaru"> <i class="fa fa-caret-up" aria-hidden="true"></i>
-					<p class="caption">“Linne (Black XS Session)” by Shugo Tokumaru</p>
-				</div>
-				<div class="tileText col-100 row-auto"> <a class='button' href='../disquiet/index.html'>Next project: DisQuiet Prototype</a> </div>
+			<div class="row justify-content-center">
+				<!-- InstanceBeginEditable name="projectPage" -->
+			<section class="col border-top">
+				<h1>AudioVisuals</h1>
+				<p>Music visualizer</p>
+				<img src='images/heroAudioVisuals.gif'> <i class='fa fa-caret-up' aria-hidden='true'></i>
+				<p class='caption'>A visualization of the song “She Wants” by Metronomy</p>
+				<table>
+					<tr>
+						<td><h3>Role</h3></td>
+						<td><p>Coder, Visual Designer</p></td>
+					</tr>
+					<tr>
+						<td><h3>Tools</h3></td>
+						<td><p>Processing</p></td>
+					</tr>
+				</table>
+				<h2>Concept</h2>
+				<p>When I was a kid, I was fascinated by the music visualizers that I found in the Windows XP-era Media Player. When I began learning to code, I decided to try making a visualizer as well. In addition to generating .gif and video art, the project allowed me to learn about math, electronics, physics, and music theory.</p>
+				<p>This was the first project where I explored the intersections of music, design, and code. I continued this exploration in projects such as <a href="../disquiet/index.html">DisQuiet</a>, <a href="../arirang/index.html">Arirang</a>, and <a href="../gato/index.html">Gato</a>.</p>
+				<h2>Samples</h2>
+				<img src="images/AudioVisuals (1).gif" alt="“Viernes” by Omar Rodriguez Lopez and Ximena Sariñana"> <i class="fa fa-caret-up" aria-hidden="true"></i>
+				<p class="caption">“Viernes” by Omar Rodriguez Lopez and Ximena Sariñana</p>
+				<img src="images/AudioVisuals (3).gif" alt="“L’Via L’Viaquez” by The Mars Volta"> <i class="fa fa-caret-up" aria-hidden="true"></i>
+				<p class="caption">“L’Via L’Viaquez” by The Mars Volta</p>
+				<img src="images/AudioVisuals (2).gif" alt="“Irene” by Caribou"> <i class="fa fa-caret-up" aria-hidden="true"></i>
+				<p class="caption">“Irene” by Caribou</p>
+				<img src="images/AudioVisuals (5).gif" alt="“Linne (Black XS Session)” by Shugo Tokumaru"> <i class="fa fa-caret-up" aria-hidden="true"></i>
+				<p class="caption">“Linne (Black XS Session)” by Shugo Tokumaru</p>
+				<div class="row"> <a class='button' href='../disquiet/index.html'>Next project: DisQuiet Prototype</a> </div>
 			</section>
 			<!-- InstanceEndEditable -->
-			<section class="tiles b-t-0">
-      	<div class="tileText col-100 row-auto p-t-0">
-        	<p>Darin E. Reyes is a visual designer and creative coder living in San Luis Obispo, California.</p>
+			</div>
+			<div class="row justify-content-center">
+				<section class="col">
+					<p>Darin E. Reyes is a visual designer and creative coder living in San Luis Obispo, California.</p>
 					<p>
 						<a href="../index.html">Work</a>
 						<a href="../about/index.html">About</a>
@@ -117,8 +117,8 @@
 							<i class="fa fa-twitter"></i> 
 						</a>
 					</p>
-      	</div>
-    	</section>
+				</section>
+			</div>
 			<!-- InstanceBeginEditable name="homePage" -->
 			<!-- InstanceEndEditable -->
 		
