--- a/fishyflop/index.html
+++ b/fishyflop/index.html
@@ -56,96 +56,95 @@
 		<!-- InstanceEndEditable -->
 		
 </head>
-  <body>
-		<section id="loading">
+  <body class="row justify-content-center">
+		<div id="loading">
   	  <img src="../images/loading.gif" alt="now loading">
-	  </section>
-		<div id="content">
-			<header>
+	  </div>
+		<div id="content" class="col">
+			<header class="row justify-content-start">
 				<a href="../index.html">
 					<img src="../images/catface.png" id="catface" alt="Catface logo">
 				</a>
 			</header>
 	  
-			<!-- InstanceBeginEditable name="projectPage" -->
-			<section class="tiles">
-      <div class="tileText col-100">
+			<div class="row justify-content-center">
+				<!-- InstanceBeginEditable name="projectPage" -->
+			<section class="col border-top">
+				<h1>Fishy Flop</h1>
+				<p>UI and gameplay assets for a mobile game</p>
+				<img src='images/fishyFlopHero-large.gif'>
+				<table>
+					<tr>
+						<td>
+							<h3>Client</h3>
+						</td>
+						<td>
+							<p>The Fishy Flop Team</p>
+						</td>
+					</tr>
 
-        <h1>Fishy Flop</h1>
-        <p>UI and gameplay assets for a mobile game</p>
-        <img src='images/fishyFlopHero-large.gif'>
-        <table>
-          <tr>
-            <td>
-              <h3>Client</h3>
-            </td>
-            <td>
-              <p>The Fishy Flop Team</p>
-            </td>
-          </tr>
+					<tr>
+						<td>
+							<h3>Role</h3>
+						</td>
+						<td>
+							<p>UI Designer, Visual Designer</p>
+						</td>
+					</tr>
 
-          <tr>
-            <td>
-              <h3>Role</h3>
-            </td>
-            <td>
-              <p>UI Designer, Visual Designer</p>
-            </td>
-          </tr>
+					<tr>
+						<td>
+							<h3>Tools</h3>
+						</td>
+						<td>
+							<p>Adobe Illustrator</p>
+						</td>
+					</tr>
 
-          <tr>
-            <td>
-              <h3>Tools</h3>
-            </td>
-            <td>
-              <p>Adobe Illustrator</p>
-            </td>
-          </tr>
+					<tr>
+						<td>
+							<h3>Status</h3>
+						</td>
+						<td>
+							<p><a href='https://play.google.com/store/apps/details?id=com.WouldBeCool.FishyFlop'>Available for download from the Google Play Store</a></p>
+						</td>
+					</tr>
+				</table>
+				<h2>Concept</h2>
+				<p><i>Fishy Flop</i> is a fin-tastic mobile game by The Fishy Flop Team. The game combines the physics of games like <i>Angry Birds</i> with the quirky controls of games like <i>QWOP</i>.</p>
+				<p>I ensured that the game featured intuitive interfaces and vibrant, contemporary visuals.</p>
+				<h2>The Fishy Flop Team</h2>
+				<ul>
+					<li><a href="https://www.linkedin.com/in/brian-mah-633b39126/">Brian Mah</a>, Lead Developer</li>
+					<li><a href="https://www.linkedin.com/in/alex-jungroth-561282112/">Alex Jungroth</a>, Developer</li>
+					<li>Daniel Schlesinger, Developer</li>
+					<li><a href="https://jordanhmusic.com/">Jordan Henderson</a>, Music, Audio</li>
+					<li>Me, Visuals and Interfaces</li>
+				</ul>
 
-          <tr>
-            <td>
-              <h3>Status</h3>
-            </td>
-            <td>
-              <p><a href='https://play.google.com/store/apps/details?id=com.WouldBeCool.FishyFlop'>Available for download from the Google Play Store</a></p>
-            </td>
-          </tr>
-        </table>
-        <h2>Concept</h2>
-        <p><i>Fishy Flop</i> is a fin-tastic mobile game by The Fishy Flop Team. The game combines the physics of games like <i>Angry Birds</i> with the quirky controls of games like <i>QWOP</i>.</p>
-        <p>I ensured that the game featured intuitive interfaces and vibrant, contemporary visuals.</p>
-        <h2>The Fishy Flop Team</h2>
-        <ul>
-          <li><a href="https://www.linkedin.com/in/brian-mah-633b39126/">Brian Mah</a>, Lead Developer</li>
-          <li><a href="https://www.linkedin.com/in/alex-jungroth-561282112/">Alex Jungroth</a>, Developer</li>
-          <li>Daniel Schlesinger, Developer</li>
-          <li><a href="https://jordanhmusic.com/">Jordan Henderson</a>, Music, Audio</li>
-          <li>Me, Visuals and Interfaces</li>
-        </ul>
-
-        <h2>Samples</h2>
-        <img src="images/7.jpg" alt="world 2 assets">
-        <img src="images/1.jpg" alt="world 1 assets">
-        <img src="images/2.jpg" alt="world 1 assets">
-        <i class="fa fa-caret-up" aria-hidden="true"></i>
-        <p class="caption">Two styles were established to differentiate background and foreground elements.</p>
-        <img src="images/3.jpg" alt="ui assets">
-        <img src="images/5.jpg" alt="world 1 assets">
-        <img src="images/4.jpg" alt="world 2 assets">
-        <img src="images/6.jpg" alt="world 2 assets">
-        <img src="images/8.jpg" alt="world 2 assets">
-        <img src="images/9.jpg" alt="world 2 assets">
-        <img src="images/10.jpg" alt="world 2 assets">
-        <i class="fa fa-caret-up" aria-hidden="true"></i>
-        <p class="caption">Many elements were designed to be seamlessly tiled.</p>
-      </div>
-      <div class="tileText col-100 row-auto">
+				<h2>Samples</h2>
+				<img src="images/7.jpg" alt="world 2 assets">
+				<img src="images/1.jpg" alt="world 1 assets">
+				<img src="images/2.jpg" alt="world 1 assets">
+				<i class="fa fa-caret-up" aria-hidden="true"></i>
+				<p class="caption">Two styles were established to differentiate background and foreground elements.</p>
+				<img src="images/3.jpg" alt="ui assets">
+				<img src="images/5.jpg" alt="world 1 assets">
+				<img src="images/4.jpg" alt="world 2 assets">
+				<img src="images/6.jpg" alt="world 2 assets">
+				<img src="images/8.jpg" alt="world 2 assets">
+				<img src="images/9.jpg" alt="world 2 assets">
+				<img src="images/10.jpg" alt="world 2 assets">
+				<i class="fa fa-caret-up" aria-hidden="true"></i>
+				<p class="caption">Many elements were designed to be seamlessly tiled.</p>
+      <div class="row">
         <a class='button' href='../arirang/index.html'>Previous project: Arirang Visualization</a> <a class='button' href='../breathe/index.html'>Next project: Breathe California Rebranding</a> </div>
     </section>
 			<!-- InstanceEndEditable -->
-			<section class="tiles b-t-0">
-      	<div class="tileText col-100 row-auto p-t-0">
-        	<p>Darin E. Reyes is a visual designer and creative coder living in San Luis Obispo, California.</p>
+			</div>
+			<div class="row justify-content-center">
+				<section class="col">
+					<p>Darin E. Reyes is a visual designer and creative coder living in San Luis Obispo, California.</p>
 					<p>
 						<a href="../index.html">Work</a>
 						<a href="../about/index.html">About</a>
@@ -160,8 +159,8 @@
 							<i class="fa fa-twitter"></i> 
 						</a>
 					</p>
-      	</div>
-    	</section>
+				</section>
+			</div>
 			<!-- InstanceBeginEditable name="homePage" -->
 			<!-- InstanceEndEditable -->
 		
