--- a/gato/index.html
+++ b/gato/index.html
@@ -56,61 +56,61 @@
 		<!-- InstanceEndEditable -->
 		
 </head>
-  <body>
-		<section id="loading">
+  <body class="row justify-content-center">
+		<div id="loading">
   	  <img src="../images/loading.gif" alt="now loading">
-	  </section>
-		<div id="content">
-			<header>
+	  </div>
+		<div id="content" class="col">
+			<header class="row justify-content-start">
 				<a href="../index.html">
 					<img src="../images/catface.png" id="catface" alt="Catface logo">
 				</a>
 			</header>
 	  
-			<!-- InstanceBeginEditable name="projectPage" -->
-			<section class="tiles">
-				<div class="tileText col-100">
-					<h1>Gato</h1>
-					<p>Interactive installation for babies, children, and their caretakers</p>
-					<div class='video video-16x9'>
-						<iframe src='https://player.vimeo.com/video/243570108' frameborder='0' webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-					</div>
-					<table>
-						<tr>
-							<td><h3>Client</h3></td>
-							<td><p>Crocker Art Museum</p></td>
-						</tr>
-						<tr>
-							<td><h3>Role</h3></td>
-							<td><p>Audio Designer, Coder, Visual Designer, in collaboration with Michelle Lee</p></td>
-						</tr>
-						<tr>
-							<td><h3>Tools</h3></td>
-							<td><p>Ableton Live, Adobe Illustrator, Processing, Unity C#, XBox Kinect</p></td>
-						</tr>
-						<tr>
-							<td><h3>Status</h3></td>
-							<td><p>Exhibited at the Crocker Art Museum from May 2017 to October 2017</p></td>
-						</tr>
-					</table>
-					<h2>Concept</h2>
-					<p>The purpose of the grant was to create art that could help make babies and children school-ready. I designed a multi-layered experience that engaged the developing senses of babies, the playfulness of children, and the emotional development of their caretakers.</p>
-					<p>The piece features a 20-foot stuffed cat, motion-reactive projected visuals, and music that changes depending on a visitor's position in the space.</p>
-					<h2>Process</h2>
-					<img src="images/Sequence01_2.gif" alt="Kinect depth vision proof-of-concept"> <i class="fa fa-caret-up" aria-hidden="true"></i>
-					<p class="caption">Using the XBox Kinect to create motion-reactive visuals in the Unity game engine</p>
-					<img src="images/20170515_162042(0).jpg" alt="kinect vision">
-					<p>The giant cat was inspired by the work of childhood psychologist DW Winnicott. He theorised that our childhood relationships to soft toys deepen our relationships to reality and ourselves, and prepare us to be emotionally mature adults.</p>
-					<p>It is meant to remind adults of what it was like to be small, and to have a stuffed companion. Young visitors have enjoyed climbing over the cat and cuddling with it while watching the projection. Some children have spent over an hour with the cat.</p>
-					<img src="images/gatoHero.gif" alt="projection imagery"> <i class="fa fa-caret-up" aria-hidden="true"></i>
-					<p class="caption">Imagery in the projection tells the story of twenty-something reconnecting with their childhood selves.</p>
+			<div class="row justify-content-center">
+				<!-- InstanceBeginEditable name="projectPage" -->
+			<section class="col border-top">
+				<h1>Gato</h1>
+				<p>Interactive installation for babies, children, and their caretakers</p>
+				<div class='video video-16x9'>
+					<iframe src='https://player.vimeo.com/video/243570108' frameborder='0' webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 				</div>
-				<div class="tileText col-100 row-auto"> <a class='button' href='../breathe/index.html'>Previous project: Breathe California Rebranding</a> <a class='button' href='../shadowplay/index.html'>Next project: ShadowPlay</a></div>
+				<table>
+					<tr>
+						<td><h3>Client</h3></td>
+						<td><p>Crocker Art Museum</p></td>
+					</tr>
+					<tr>
+						<td><h3>Role</h3></td>
+						<td><p>Audio Designer, Coder, Visual Designer, in collaboration with Michelle Lee</p></td>
+					</tr>
+					<tr>
+						<td><h3>Tools</h3></td>
+						<td><p>Ableton Live, Adobe Illustrator, Processing, Unity C#, XBox Kinect</p></td>
+					</tr>
+					<tr>
+						<td><h3>Status</h3></td>
+						<td><p>Exhibited at the Crocker Art Museum from May 2017 to October 2017</p></td>
+					</tr>
+				</table>
+				<h2>Concept</h2>
+				<p>The purpose of the grant was to create art that could help make babies and children school-ready. I designed a multi-layered experience that engaged the developing senses of babies, the playfulness of children, and the emotional development of their caretakers.</p>
+				<p>The piece features a 20-foot stuffed cat, motion-reactive projected visuals, and music that changes depending on a visitor's position in the space.</p>
+				<h2>Process</h2>
+				<img src="images/Sequence01_2.gif" alt="Kinect depth vision proof-of-concept"> <i class="fa fa-caret-up" aria-hidden="true"></i>
+				<p class="caption">Using the XBox Kinect to create motion-reactive visuals in the Unity game engine</p>
+				<img src="images/20170515_162042(0).jpg" alt="kinect vision">
+				<p>The giant cat was inspired by the work of childhood psychologist DW Winnicott. He theorised that our childhood relationships to soft toys deepen our relationships to reality and ourselves, and prepare us to be emotionally mature adults.</p>
+				<p>It is meant to remind adults of what it was like to be small, and to have a stuffed companion. Young visitors have enjoyed climbing over the cat and cuddling with it while watching the projection. Some children have spent over an hour with the cat.</p>
+				<img src="images/gatoHero.gif" alt="projection imagery"> <i class="fa fa-caret-up" aria-hidden="true"></i>
+				<p class="caption">Imagery in the projection tells the story of twenty-something reconnecting with their childhood selves.</p>
+				<div class="row"> <a class='button' href='../breathe/index.html'>Previous project: Breathe California Rebranding</a> <a class='button' href='../shadowplay/index.html'>Next project: ShadowPlay</a></div>
 			</section>
 			<!-- InstanceEndEditable -->
-			<section class="tiles b-t-0">
-      	<div class="tileText col-100 row-auto p-t-0">
-        	<p>Darin E. Reyes is a visual designer and creative coder living in San Luis Obispo, California.</p>
+			</div>
+			<div class="row justify-content-center">
+				<section class="col">
+					<p>Darin E. Reyes is a visual designer and creative coder living in San Luis Obispo, California.</p>
 					<p>
 						<a href="../index.html">Work</a>
 						<a href="../about/index.html">About</a>
@@ -125,8 +125,8 @@
 							<i class="fa fa-twitter"></i> 
 						</a>
 					</p>
-      	</div>
-    	</section>
+				</section>
+			</div>
 			<!-- InstanceBeginEditable name="homePage" -->
 			<!-- InstanceEndEditable -->
 		
