--- a/audiovisuals/index.html
+++ b/audiovisuals/index.html
@@ -119,8 +119,10 @@
 					</p>
 				</section>
 			</div>
+			<div class="row justify-content-center">
 			<!-- InstanceBeginEditable name="homePage" -->
 			<!-- InstanceEndEditable -->
+			</div>
 		
 		</div>
 	</body>
