--- a/disquiet/index.html
+++ b/disquiet/index.html
@@ -138,8 +138,10 @@
 					</p>
 				</section>
 			</div>
+			<div class="row justify-content-center">
 			<!-- InstanceBeginEditable name="homePage" -->
 			<!-- InstanceEndEditable -->
+			</div>
 		
 		</div>
 	</body>
