--- a/fishyflop/index.html
+++ b/fishyflop/index.html
@@ -161,8 +161,10 @@
 					</p>
 				</section>
 			</div>
+			<div class="row justify-content-center">
 			<!-- InstanceBeginEditable name="homePage" -->
 			<!-- InstanceEndEditable -->
+			</div>
 		
 		</div>
 	</body>
