--- a/shadowplay/index.html
+++ b/shadowplay/index.html
@@ -124,8 +124,10 @@
 					</p>
 				</section>
 			</div>
+			<div class="row justify-content-center">
 			<!-- InstanceBeginEditable name="homePage" -->
 			<!-- InstanceEndEditable -->
+			</div>
 		
 		</div>
 	</body>
